data/derived/sp14/progs/unify/prog4249.ml.out
Characters 29-38:
  let fixpoint (f,b) = wwhile ((b,false)
                               ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
